# laufey

./: .gitignore  Cargo.toml  Makefile  README.md  architecture.md  book.toml  flake.nix
.github/workflows/: ci.yml  docs.yml
backend-common/: CMakeLists.txt
backend-common/include/: laufey_backend_common.h  laufey_value.h  wef_backend_common.h
backend-common/src/: clipboard_linux.cc  clipboard_mac.mm  clipboard_win.cc  dialog_linux.cc  dialog_mac.mm  dialog_win.cc  dock_mac.mm  keymap_gdk.cc  keymap_mac.mm  keymap_vk.cc  laufey_value.cc  menu_linux.cc  menu_mac.mm  notifications_linux.cc  notifications_mac.mm  notifications_win.cc  parse_options.cc  permissions_mac.mm  permissions_stub.cc  test_hooks.cc  title_badge.cc  tray_linux.cc  tray_mac.mm  tray_win.cc
backend-winit-common/: Cargo.toml
backend-winit-common/src/: dock.rs  lib.rs  notification.rs  permission.rs  tray.rs  widget.rs
capi/: Cargo.toml  build.rs
capi/include/: laufey.h  laufey_external_links.h  wef.h  win32_menu.h
capi/src/: keyboard.rs  lib.rs  mouse.rs
cef/: CMakeLists.txt  build_win.bat  flake.nix
cef/macos/: Info.plist.in  helper-Info.plist.in
cef/src/: app.cc  app.h  helper.cc  main_linux.cc  main_mac.mm  main_windows.cc  render_process_handler.cc  render_process_handler.h  renderer_app.cc  renderer_app.h  runtime_loader.cc  runtime_loader.h  runtime_loader_linux.cc  runtime_loader_mac.mm  scheme_handler.cc  scheme_handler.h
docs/: SUMMARY.md  architecture.md  backends.md  building.md  c-abi.md  clipboard.md  dialogs.md  distribution.md  dock-taskbar.md  e2e-testing.md  index.md  input-events.md  ios.md  javascript-interop.md  menus.md  notifications.md  permissions.md  tray.md  window-events.md  window-handles.md  window-management.md
examples/binding_test/: Cargo.toml
examples/binding_test/src/: lib.rs
examples/cef_e2e/: Cargo.toml
examples/cef_e2e/src/: lib.rs
examples/ddcore/: Cargo.toml  index.html  runtime.js
examples/ddcore/src/: lib.rs
examples/hello/: Cargo.toml
examples/hello/icons/: README.md
examples/hello/src/: lib.rs
examples/ios_hello/: Cargo.toml
examples/ios_hello/src/: lib.rs
examples/native_e2e/: Cargo.toml
examples/native_e2e/src/: lib.rs
examples/native_e2e_driver/: Cargo.toml
examples/native_e2e_driver/src/: main.rs
examples/native_ui/: Cargo.toml
examples/native_ui/src/: lib.rs
examples/presentation/: Cargo.toml  architecture.html
examples/presentation/src/: lib.rs
ios/: .gitignore  Info.plist  README.md  build.sh  package-ipa.sh
scripts/: native-e2e-run.sh
servo/: Cargo.toml
servo/src/: main.rs
webview/: CMakeLists.txt  build_win.bat  flake.nix
webview/ios/: Info.plist.in
webview/src/: init_script.h  laufey_json.h  main_ios.mm  main_linux.cc  main_mac.mm  main_windows.cc  runtime_loader.cc  runtime_loader.h  scheme_exchange.h  webview_ios.mm  webview_linux.cc  webview_macos.mm  webview_value.h  webview_windows.cc
winit/: Cargo.toml
winit/src/: main.rs
