[package]
name = "laufey"
version = "0.3.2"
edition = "2021"
description = "A web embedded framework: build cross-platform apps with web technologies and your choice of browser engine."
license = "MIT"
repository = "https://github.com/littledivy/laufey"

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt"] }

[build-dependencies]
bindgen = { version = "0.72", features = ["runtime"] }
